Bug 155327 - FILEOPEN: PPTX: Wordart not displayed
Summary: FILEOPEN: PPTX: Wordart not displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: FontWork-WordArt
  Show dependency treegraph
 
Reported: 2023-05-15 14:12 UTC by Xisco Faulí
Modified: 2023-05-17 07:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-15 14:12:56 UTC
Steps to reproduce:
1. Open attachment 140564 [details] from bug 116350

-> Nothing is displayed.

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8cd29dac4046e38bcf14784accab94ad1b4ac4d7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-05-15 14:13:47 UTC
Regression introduced by:

author	Regina Henschel <rb.henschel@t-online.de>	2023-03-11 18:39:06 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2023-03-14 07:40:00 +0000
commit 260735ff98631b94ae8737cf1cead3e20bade618 (patch)
tree 05153f2b33f6693a02ed14b8f19333973283ee10
parent 599722cf77310429a9b9bd2a348486a08b60de0d (diff)
tdf#139618 Add WordArt fill types in pptx import

Bisected with: bibisect-linux64-7.6

Adding Cc: to Regina Henschel
Comment 2 Xisco Faulí 2023-05-15 14:16:24 UTC
Also reproduced with attachment 144118 [details] from bug 119222
Comment 3 Xisco Faulí 2023-05-15 14:23:53 UTC
attachment 151121 [details] from bug 125070 is also affected
Comment 4 Regina Henschel 2023-05-15 20:13:16 UTC
The problem with these examples is, that the character properties in the file do not define a fill property. PowerPoint uses the "tx1" from the theme in such case.  But on import the "moFillType" member of the FillProperties is not set and the "maFillColor" member has "meMode = COlOR_UNUSED".

The effect of not set moFillType is, that in the call of rCharProps.maFillProperties.pushToPropMap in [1] it returns immediately without doing anything [2]. But even if it would be set to XML_solidFill for example, it would still not work, because "if( maFillColor.isUsed() )" in line #423 would fail. 

[1] https://opengrok.libreoffice.org/xref/core/oox/source/drawingml/shape.cxx?r=60bce1af#732
[2] https://opengrok.libreoffice.org/xref/core/oox/source/drawingml/fillproperties.cxx?r=1df0565f#408

Perhaps it is needed to copy the rCharProps.maFillProperties and tweak them.
Comment 5 Commit Notification 2023-05-16 19:57:37 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04ae198019cf2c6593023f9ef630e4e99f65defe

tdf#155327 Detect default color in WordArt

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-05-17 07:42:28 UTC
Verified in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: d07cc6706ef3b382fa16a104c97b69bc2d2365e5
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Regina, thanks for fixing this issue!!